# exatrkx-inference

./: CMakeLists.txt
exatrkx-inference/exatrkx/: TestInference_module.cc  testinference_uB_slice_job.fcl
exatrkx-inference/ups/: product_deps
exatrkxinference/: CMakeLists.txt  TestInference_module.cc
exatrkxinference/exatrkx-inference/: CMakeLists.txt
exatrkxinference/exatrkx-inference/exatrkx/: CMakeLists.txt
ups/: product_deps
